--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.29.1",
     "recharts": "^3.2.0",
     "tailwindcss": "^4.1.13"
   },
