--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^6.1.19",
     "@headlessui/react": "^2.2.8",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "papaparse": "^5.5.3",
